--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Beranda</title>
-  </head>
-  <body>
-    <center>
-      <h1>Halo!</h1>
-    </center>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />y
+
+  <title>Beranda | Tata Tertib Siswa</title>
+</head>
+
+<body>
+<%- include ("assets/navbar.ejs") %>
+
+
+  <div class="content">
+    <div class="wrapper top-container">
+      <header class="showcase bg-danger">
+        <h1>Selamat Datang</h1>
+        <br />
+        <a class="ui inverted button" href="/siswa">
+          Lihat Info Siswa
+        </a>
+      </header>
+        <div class="top-box top-box-a bg-success text-light">
+          <h4>Daftar Siswa</h4>
+          <p class="number"><% nama_siswa.nama_siswa %></p>
+          <a class="ui inverted button" href="/siswa">
+            Lihat Selengkapnya
+          </a>
+        </div>
+        <div class="top-box top-box-b bg-danger text-light">
+          <h4>Daftar Pelanggaran</h4>
+          <a class="ui inverted button" href="/siswa">
+            Lihat Selengkapnya
+          </a>
+        </div>
+    </div>
+  </div>
+  </div>
+
+
+</body>
+
 </html>
